# bloomberg_dl

./: .gitignore  README.md  dub.sdl  dub.selections.json  example.sh
bloomberg_dl_soap/: .soapStub.h.swp  CMakeLists.txt  PerSecurityWSBinding.nsmap  README.md  bloomberg_dl_client.cpp  bloomberg_dl_client.h  bloomberg_dl_test.cpp  build.sh  build_debug.sh  soapC.cpp  soapPerSecurityWSBindingProxy.cpp  soapPerSecurityWSBindingProxy.h  stdsoap2.cpp
bloomberg_dl_soap/gsoap-2.8/: gsoap.spec
bloomberg_dl_soap/gsoap-2.8/autom4te.cache/: requests
bloomberg_dl_soap/gsoap-2.8/gsoap/doc/guide/html/: functions_vars_a.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_h.html  functions_vars_i.html  functions_vars_k.html  functions_vars_l.html  functions_vars_m.html  functions_vars_n.html  functions_vars_o.html  functions_vars_p.html  functions_vars_r.html  functions_vars_s.html  functions_vars_t.html  functions_vars_u.html  functions_vars_v.html  functions_vars_z.html  functions_z.html
bloomberg_dl_soap/gsoap-2.8/gsoap/samples/async/: async.wsdl
bloomberg_dl_soap/plugin/: soapH.h  soapStub.h  stdsoap2.h
source/bloomberg_dl/: bloomberg_dl.d
tools/: tools.d
